{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 32,
  "lineage": "8b2996c5-6bf1-361b-e0e9-bf6668f513c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f637f1cf6b8bcf15",
            "domain": "vpc",
            "id": "eipalloc-0f637f1cf6b8bcf15",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-156-211.compute-1.amazonaws.com",
            "public_ip": "52.22.156.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TestEIP"
            },
            "tags_all": {
              "Name": "TestEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:internet-gateway/igw-0b05cc54ad75dcccb",
            "id": "igw-0b05cc54ad75dcccb",
            "owner_id": "736116236436",
            "tags": {
              "Name": "Test-InternetGateway"
            },
            "tags_all": {
              "Name": "Test-InternetGateway"
            },
            "vpc_id": "vpc-05fa4cfb1ce2bb7b3"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f637f1cf6b8bcf15",
            "association_id": "eipassoc-0e94586b66414ae2a",
            "connectivity_type": "public",
            "id": "nat-092439a844ad99fef",
            "network_interface_id": "eni-0126d9148a1bd5e00",
            "private_ip": "12.0.1.48",
            "public_ip": "52.22.156.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bced3426ff8a161a",
            "tags": {
              "Name": "TestNATGateway"
            },
            "tags_all": {
              "Name": "TestNATGateway"
            }
          },
          "dependencies": [
            "aws_eip.test_eip",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "test_private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbd29340ea29c9831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-092439a844ad99fef",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbd29340ea29c983",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test_eip",
            "aws_nat_gateway.test_nat_gateway",
            "aws_route_table.test_private_route_table",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:route-table/rtb-0bbd29340ea29c983",
            "id": "rtb-0bbd29340ea29c983",
            "owner_id": "736116236436",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Test-PrivateRouteTable"
            },
            "tags_all": {
              "Name": "Test-PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fa4cfb1ce2bb7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:route-table/rtb-0814490bb0d8307f6",
            "id": "rtb-0814490bb0d8307f6",
            "owner_id": "736116236436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b05cc54ad75dcccb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test-PublicRouteTable"
            },
            "tags_all": {
              "Name": "Test-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fa4cfb1ce2bb7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd6d912fc14ad117",
            "route_table_id": "rtb-0bbd29340ea29c983",
            "subnet_id": "subnet-0d7ad196a137af285"
          },
          "dependencies": [
            "aws_route_table.test_private_route_table",
            "aws_subnet.test_private_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0277fbdf5b092830c",
            "route_table_id": "rtb-0814490bb0d8307f6",
            "subnet_id": "subnet-0bced3426ff8a161a"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_public_route_table",
            "aws_subnet.test_public_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:subnet/subnet-0d7ad196a137af285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7ad196a137af285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736116236436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-PrivateSubnet"
            },
            "tags_all": {
              "Name": "Test-PrivateSubnet"
            },
            "vpc_id": "vpc-05fa4cfb1ce2bb7b3"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:subnet/subnet-0bced3426ff8a161a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bced3426ff8a161a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "736116236436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-PublicSubnet"
            },
            "tags_all": {
              "Name": "Test-PublicSubnet"
            },
            "vpc_id": "vpc-05fa4cfb1ce2bb7b3"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:vpc/vpc-05fa4cfb1ce2bb7b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0274d9e7edf221608",
            "default_route_table_id": "rtb-083e04eab10ba63de",
            "default_security_group_id": "sg-043b6c2856ab2e973",
            "dhcp_options_id": "dopt-0225a1f823354f824",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05fa4cfb1ce2bb7b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083e04eab10ba63de",
            "owner_id": "736116236436",
            "tags": {
              "Name": "Test-VPC"
            },
            "tags_all": {
              "Name": "Test-VPC"
            }
          }
        }
      ]
    }
  ]
}